amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/input-objects.report
ModelId: file://amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/input-objects.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#recursive-shape
  Message: Input type Continent cannot be part of cyclic references Continent.country > Country.continent > Continent
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/input-objects.graphql#/declares/shape/Continent
  Property: 
  Range: [(1,0)-(3,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/core#recursive-shape
  Message: Input type Country cannot be part of cyclic references Continent.country > Country.continent > Continent
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/input-objects.graphql#/declares/shape/Country
  Property: 
  Range: [(5,0)-(7,1)]
  Location: 
